--- a/myapp/templates/myapp/export.html
+++ b/myapp/templates/myapp/export.html
@@ -36,8 +36,13 @@
   
                     <div class="d-flex justify-content-between mt-4">
                       <button type="submit" class="btn btn-success px-5">Export</button>
-                      <button type="submit" class="btn px-4" style="background-color:white;color:#4E7A5D;border:1px solid #4E7A5D;">View Attendance</button>
+                     
+                      <span style="background-color:white;color:#4E7A5D;border:1px solid #4E7A5D;text-align:center;padding:.5rem 1rem;border-radius:.5rem;" data-bs-toggle="modal" data-bs-target="#deleteEmployeeModal" >
+                              View Attendance
+                      </span>
+
                     </div>
+
                   </div>
   
                 </div>
@@ -93,27 +98,54 @@
       </div>
     </div>
   
-   
-  
 
 
-  {% if messages %}
-      {% for message in messages %}
-          {% if 'export' in message.tags %}
-              <script>
-                  swal({
-                      title: "Export Successfully!",
-                      text: "{{ message }}",
-                      icon: "success",
-                  });
-              </script>
+     <!-- view MODAL EMPLOYEE -->
+     <div class="modal fade" id="deleteEmployeeModal" tabindex="-1" aria-labelledby="deleteEmployeeModal" aria-hidden="true">
+      <div class="modal-dialog">
+        <form action="" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="id" value="deleteEmployeeModal">
+      
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="deleteEmployeeModal">Attendance</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+
+          <div class="modal-body">
+            <table>
+              <thead>
+                  <tr>
+                      <th>Employee Code</th>
+                      <th>TIME IN</th>
+                      <th>BREAK OUT</th>
+                      </tr>
+              </thead>
+              <tbody>
+                  {% for record in data %}
+                  <tr>
+                      <td>{{ record.Empname }}</td> 
+                      <td>{{ record.timein }}</td>
+                      <td>{{ record.breakout }}</td>
+                    </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+        
+          </div>
+          
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        
+          </div>
+        </div>
+      </form>
+      </div>
+    </div>
 
 
 
-
-              {% endif %}
-             {% endfor %}
-         {% endif %}
 
 
 {% endblock content %}
