--- a/myapp/templates/myapp/generate_qr_code.html
+++ b/myapp/templates/myapp/generate_qr_code.html
@@ -1,4 +1,4 @@
-{% extends "myapp/base.html" %}
+{% comment %} {% extends "myapp/base.html" %}
 {% load static %}
 
 {% block content %}
@@ -344,4 +344,4 @@
 {% endblock content %}
 
 
-
+ {% endcomment %}
